<resources>
    <string name="app_name">Served</string>
    <string name="app_done">DONE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_no_account">No account yet?</string>
    <string name="login_sign_up">Sign Up!</string>

    <string name="signing_up_title">Signing Up</string>
    <string name="signing_up_first_name">First Name</string>
    <string name="signing_up_last_name">Last Name</string>
    <string name="signing_up_email">Email</string>
    <string name="signing_up_confirm_email">Confirm Email</string>
    <string name="signing_up_password">Password</string>
    <string name="signing_up_confirm_password">Confirm Password</string>
    <string name="signing_up_continue">Continue</string>

    <string name="home_fragment_create_new">Create a new Recipe</string>
    <string name="home_fragment_tab_foodies">Your Foodies</string>
    <string name="home_fragment_tab_discover">Discover</string>

    <string name="new_recipe_heading">Write a New Recipe</string>
    <string name="new_recipe_title">Title:</string>
    <string name="new_recipe_title_hint">What do you want to call your recipe?</string>
    <string name="new_recipe_description_title">Brief Description:</string>
    <string name="new_recipe_description_hint">Give a brief description of your recipe...</string>
    <string name="new_recipe_add_a_picture">Add a picture/video (optional):</string>
    <string name="new_recipe_ingredients">Ingredients:</string>
    <string name="new_recipe_search">Search...</string>
    <string name="new_recipe_automatic_tagging">Automatic Tagging</string>
    <string name="new_recipe_next">NEXT</string>

    <string name="creating_steps_description_hint">Write some instructions for your recipe...</string>
    <string name="creating_steps_ingredients_title">Ingredients used in step:</string>
    <string name="creating_steps_ingredients_btn">Add Ingredient</string>
    <string name="creating_steps_finish_steps">Complete Recipe</string>
    <string name="creating_steps_add_step">Add Step</string>

    <string name="recipe_card_yum">Yum</string>
    <string name="recipe_card_yummy">Yummy</string>

    <string name="send_new_recipe_sending">Sending...</string>
    <string name="complete_recipe">Sent</string>

    <string name="view_recipe_start_recipe">Start</string>
    <string name="view_recipe_save">Save</string>
    <string name="view_recipe_bulletpoint">\u2022</string>
    <string name="view_recipe_ingredients">Ingredients List:</string>

    <string name="view_steps_ingredients">Ingredients For This Step:</string>
    <string name="view_steps_cancel">Cancel</string>
    <string name="view_steps_next">Next Step</string>
    <string name="view_steps_finish">Finish</string>

</resources>
