<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorWhite"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNewRecipeTitle"
                android:gravity="center"
                android:text="@string/new_recipe_heading"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_medium"
                android:textSize="@dimen/text_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:text="@string/new_recipe_title"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorGreyDark"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:paddingBottom="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_small"
                android:paddingTop="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:background="@drawable/bg_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etTitle"
                    android:backgroundTint="@color/colorWhite"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/new_recipe_title_hint"
                    android:minLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:textStyle="bold"
                android:text="@string/new_recipe_description_title"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorGreyDark"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginTop="@dimen/padding_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:paddingBottom="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_small"
                android:paddingTop="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:background="@drawable/bg_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDescription"
                    android:gravity="top"
                    android:backgroundTint="@color/colorWhite"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/new_recipe_description_hint"
                    android:minLines="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <!--<TextView-->
                <!--android:layout_marginTop="@dimen/padding_xlarge"-->
                <!--android:textStyle="bold"-->
                <!--android:text="@string/new_recipe_ingredients"-->
                <!--android:textSize="@dimen/text_large"-->
                <!--android:textColor="@color/colorGreyDark"-->
                <!--android:layout_marginRight="@dimen/padding_medium"-->
                <!--android:layout_marginLeft="@dimen/padding_medium"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:layout_marginStart="@dimen/padding_medium"-->
                <!--android:layout_marginEnd="@dimen/padding_medium"-->
                <!--android:id="@+id/rvIngredients"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"/>-->

            <!--<FrameLayout-->
                <!--android:paddingBottom="@dimen/padding_small"-->
                <!--android:paddingRight="@dimen/padding_small"-->
                <!--android:paddingLeft="@dimen/padding_small"-->
                <!--android:paddingTop="@dimen/padding_small"-->
                <!--android:layout_marginLeft="@dimen/padding_medium"-->
                <!--android:layout_marginRight="@dimen/padding_medium"-->
                <!--android:background="@drawable/bg_edittext_border"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
                <!--<EditText-->
                    <!--android:id="@+id/etIngredients"-->
                    <!--android:gravity="top"-->
                    <!--android:backgroundTint="@color/colorWhite"-->
                    <!--android:textSize="@dimen/text_medium"-->
                    <!--android:hint="@string/new_recipe_search"-->
                    <!--android:minLines="1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</FrameLayout>-->

            <Button
                android:id="@+id/btnNewRecipeNext"
                android:layout_marginRight="@dimen/text_medium"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:elevation="@dimen/elevation_level"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:background="@drawable/bg_orange_button"
                android:layout_gravity="bottom|right"
                android:text="@string/new_recipe_next"
                android:minHeight="@dimen/minimum_touch_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    <!--</ScrollView>-->



</LinearLayout>