<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:padding="@dimen/padding_medium"
                android:gravity="center"
                android:text="Step"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:id="@+id/tvStepTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorGreyDark"
                android:text="filler text filler text filler text filler text filler text filler text filler text filler text filler text filler text filler text filler text filler text filler text"
                android:padding="@dimen/padding_medium"
                android:id="@+id/tvStepDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/text_medium"
                android:textStyle="bold"
                android:text="@string/view_steps_ingredients"
                android:textSize="@dimen/text_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginBottom="@dimen/padding_large"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/padding_medium"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_margin="@dimen/padding_large"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnCancel"
                android:layout_gravity="center"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:elevation="@dimen/elevation_level"
                android:background="@drawable/bg_orange_button"
                android:text="@string/view_steps_cancel"
                android:minHeight="@dimen/minimum_touch_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <FrameLayout
            android:layout_margin="@dimen/padding_large"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnNext"
                android:layout_gravity="center"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:elevation="@dimen/elevation_level"
                android:background="@drawable/bg_orange_button"
                android:text="@string/view_steps_next"
                android:minHeight="@dimen/minimum_touch_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>